# tsify-next-example

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
js_mode/: Cargo.toml
js_mode/pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts
js_mode/src/: map.rs
pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts
src/: array.rs  closure.rs  interface.rs  lib.rs  namespace.rs  nullable.rs  primitive.rs  record.rs  tuple.rs  union.rs
tests/: closures.test.ts  map.test.ts  primitive.test.ts  record.test.ts  union.test.ts
