[package]
name = "tsify-next-example"
version = "0.1.0"
authors = ["todays-mitsui <todays.mitsui@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.72"
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify-next = { version = "0.5.4", features = ["json"] }
serde = "1.0.215"

[dependencies.web-sys]
version = "0.3.57"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
